fix: double scrollbar on the selectpicker

--- a/resources/scss/employee/hr-manager/evaluator.scss
+++ b/resources/scss/employee/hr-manager/evaluator.scss
@@ -146,3 +146,6 @@ table {
   cursor: pointer;
 }
 
+.choices__list--dropdown .choices__list, .choices__list[aria-expanded] .choices__list {
+  overflow: hidden;
+}
